subcontract form page

--- a/src/components/Form/Forms/SubcontractForm.astro
+++ b/src/components/Form/Forms/SubcontractForm.astro
@@ -10,7 +10,7 @@ const {
   labelClass = "block h6 text-dark-secondary mb-2",
 } = Astro.props;
 
-const formAction = "https://formspree.io/f/manqygwr";
+const formAction = "https://formspree.io/f/mrbygjan";
 
 const doubleInputs = "flex flex-col lg:flex-row lg:space-x-6 space-y-3";
 
