--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,7 +33,7 @@ const { ...seoProps } = Astro.props;
     {seoProps.noindex && <meta name="robots" content="noindex,nofollow" />}
   </head>
 
-  <body class="bg-light-primary text-text antialiased">
+  <body class="bg-primary text-text antialiased">
     <Header />
     <!-- Body tags placeholder -->
     <BodyTags />
