--- a/src/pages/subcontract.astro
+++ b/src/pages/subcontract.astro
@@ -11,6 +11,11 @@ import SecondaryHero from "@/sections/SecondaryHero.astro";
     subtitle="We are always looking for reliable subcontractors to partner with on our projects. If you are interested in working with us, please fill out the form below and we will get in touch with you."
   />
   <div class="bg-light-primary">
-    <QuoteSection formComponent={SubcontractForm} />
+    <QuoteSection 
+      FormComponent={SubcontractForm}
+      sectionTitle="Partner With Us"
+      headingText="Join Our Network of Trusted Contractors"
+      sectionId="subcontract"
+    />
   </div>
 </BaseLayout>
